overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,6 @@
 }
 
 body {
-  /* background-image: url("../assets/book-bg.jpg"); */
-  background-size: cover;
-  background-attachment: fixed;
   font-family: "Lexend Deca", sans-serif;
 }
 
@@ -119,39 +116,6 @@ html {
   border-radius: inherit;
   pointer-events: none;
 }
-
-/* html {
-  --s: 105px;
-  --c1: #b9b9b9;
-  --c2: #dcdcdc;
-  --c3: #fafafa;
-
-  background: conic-gradient(
-        from 75deg,
-        var(--c1) 15deg,
-        var(--c2) 0 30deg,
-        #0000 0 180deg,
-        var(--c2) 0 195deg,
-        var(--c1) 0 210deg,
-        #0000 0
-      )
-      calc(0.5 * var(--s)) calc(0.5 * var(--s) / 0.577),
-    conic-gradient(
-      var(--c1) 30deg,
-      var(--c3) 0 75deg,
-      var(--c1) 0 90deg,
-      var(--c2) 0 105deg,
-      var(--c3) 0 150deg,
-      var(--c2) 0 180deg,
-      var(--c3) 0 210deg,
-      var(--c1) 0 256deg,
-      var(--c2) 0 270deg,
-      var(--c1) 0 286deg,
-      var(--c2) 0 331deg,
-      var(--c3) 0
-    );
-  background-size: var(--s) calc(var(--s) / 0.577);
-} */
 
 .box-6 {
   --mask: conic-gradient(
